vista de usuarios

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Práctico 6</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos-comunes.css">
+    <link rel="stylesheet" href="estilos/estilos-index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +21,7 @@
         <p>El Sistema Único de Registros Familiares.</p>
         <h2>Hoy quiero...</h2>
         <div>
-            <a href="">...ver todos los usuarios</a>
+            <a href="vista-de-busqueda.php">...ver todos los usuarios</a>
             <a href="">...ver todos los movimientos</a>
             <a href="">...hacer una búsqueda avanzada</a>
         </div>
