--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>El Sistema Único de Registros Familiares.</p>
         <h2>Hoy quiero...</h2>
         <div>
-            <a href="vista-de-busqueda.php">...ver todos los usuarios</a>
-            <a href="">...ver todos los movimientos</a>
+            <a href="vista-de-busqueda.php?vista=usuarios">...ver todos los usuarios</a>
+            <a href="vista-de-busqueda.php?vista=movimientos">...ver todos los movimientos</a>
             <a href="">...hacer una búsqueda avanzada</a>
         </div>
         <!-- <p>Búsquedas recientes:</p>
