--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h2>S.U.R.F.</h2>
         <div>
             <a href="index.html" class="actual">Página principal</a>
-            <a href="busqueda.php">Búsqueda avanzada</a>
         </div>
     </nav>
     <main class="cuerpo">
@@ -23,7 +22,8 @@
         <div>
             <a href="vista-de-busqueda.php?vista=usuarios">...ver todos los usuarios</a>
             <a href="vista-de-busqueda.php?vista=movimientos">...ver todos los movimientos</a>
-            <a href="">...hacer una búsqueda avanzada</a>
+            <a href="alta-familiar.php">...cargar un usuario</a>
+            <a href="alta-movimiento.php">...cargar un movimiento</a>
         </div>
         <!-- <p>Búsquedas recientes:</p>
         <a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
